--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,47 @@ jobs:
           # Ejecuta checkov para escanear IaC
           checkov -d . --quiet --skip-check CKV_DOCKER_2 --skip-check CKV_GITHUB_1
 
+  bandit:
+    name: Bandit - Security Linter for Python
+    runs-on: ubuntu-latest
+    needs: checkov
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Bandit
+        run: pip install bandit
+
+      - name: Run Bandit scan
+        run: bandit -r backend -ll
+
+  trivy:
+    name: Trivy - Container Vulnerability Scan
+    runs-on: ubuntu-latest
+    needs: bandit
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Trivy
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.43.1_Linux-64bit.deb
+          sudo dpkg -i trivy_0.43.1_Linux-64bit.deb
+
+      - name: Run Trivy scan
+        run: trivy fs --severity HIGH,CRITICAL --exit-code 1 .
+
   tests:
     name: Run Tests
     runs-on: ubuntu-latest
-    needs: checkov
+    needs: trivy
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -51,4 +88,4 @@ jobs:
       - name: Run tests
         run: |
           source venv/bin/activate
-          pytest backend/tests/test_reservas.py
+          pytest backend/tests --maxfail=1 --disable-warnings -q
