--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  id-token: write
+  checks: write
+
 jobs:
   checkov:
     name: Checkov - IaC Security Scan
