Corregir pipeline CI con exclusión de venv-checkov en Checkov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run Checkov scan
         run: |
-          # Ejecuta checkov para escanear IaC
+          # Ejecuta checkov para escanear IaC excluyendo venv-checkov
           checkov -d . --quiet --skip-check CKV_DOCKER_2 --skip-check CKV_GITHUB_1 --skip-path venv-checkov
 
   bandit:
