--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         run: pip install bandit
 
       - name: Run Bandit scan
-        run: bandit -r backend -ll
+        run: bandit -r backend --exclude backend/venv -ll
 
   trivy:
     name: Trivy - Container Vulnerability Scan
