--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,8 +65,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget
-          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.43.1_Linux-64bit.deb
-          sudo dpkg -i trivy_0.43.1_Linux-64bit.deb
+          wget https://github.com/aquasecurity/trivy/releases/download/v0.63.0/trivy_0.63.0_Linux-64bit.deb
+          sudo dpkg -i trivy_0.63.0_Linux-64bit.deb
 
       - name: Run Trivy scan
         run: trivy fs --severity HIGH,CRITICAL --exit-code 1 .
