--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r backend/requirements.txt
+          pip install pytest
 
       - name: Run tests
         run: |
