--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           pip install -r backend/requirements.txt
-          pip install pytest
+          pip install pytest httpx
 
       - name: Run tests
         run: |
