Actualizar pipeline CI: Trivy v0.63.0, corregir entorno virtual en tests y agregar httpx

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,3 +94,5 @@ jobs:
         run: |
           source venv/bin/activate
           pytest backend/tests --maxfail=1 --disable-warnings -q
+        env:
+          PYTHONPATH: ${{ github.workspace }}
