--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,12 +87,10 @@ jobs:
         run: |
           python3 -m venv venv
           source venv/bin/activate
+          pip install --upgrade pip
           pip install -r backend/requirements.txt
-          pip install pytest httpx
 
       - name: Run tests
         run: |
           source venv/bin/activate
           pytest backend/tests --maxfail=1 --disable-warnings -q
-        env:
-          PYTHONPATH: ${{ github.workspace }}
