--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,78 +18,65 @@ jobs:
     name: Checkov - IaC Security Scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install Checkov
-        run: pip install checkov
+      - run: pip install checkov
 
-      - name: Run Checkov scan
-        run: |
-          checkov -d . --quiet --skip-check CKV_DOCKER_2 --skip-check CKV_GITHUB_1 --skip-path venv-checkov
+      - run: checkov -d . --quiet --skip-check CKV_DOCKER_2 --skip-check CKV_GITHUB_1 --skip-path venv-checkov
 
   bandit:
     name: Bandit - Security Linter for Python
     runs-on: ubuntu-latest
     needs: checkov
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install Bandit
-        run: pip install bandit
+      - run: pip install bandit
 
-      - name: Run Bandit scan
-        run: bandit -r backend --exclude backend/venv -ll
+      - run: bandit -r backend --exclude backend/venv -ll
 
   trivy:
     name: Trivy - Container Vulnerability Scan
     runs-on: ubuntu-latest
     needs: bandit
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Install Trivy
-        run: |
+      - run: |
           sudo apt-get update
           sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.63.0/trivy_0.63.0_Linux-64bit.deb
           sudo dpkg -i trivy_0.63.0_Linux-64bit.deb
 
-      - name: Run Trivy scan
-        run: trivy fs --severity HIGH,CRITICAL --exit-code 1 .
+      - run: trivy fs --severity HIGH,CRITICAL --exit-code 1 .
 
   tests:
     name: Run Tests
     runs-on: ubuntu-latest
     needs: trivy
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install dependencies and set PYTHONPATH
         run: |
           python3 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest fastapi httpx
+          echo "PYTHONPATH=$(pwd)/backend" >> $GITHUB_ENV
 
       - name: Run tests
         run: |
