Corregir skip_check en workflow, añadir HEALTHCHECK Dockerfile y agregar requirements.txt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: bridgecrewio/checkov-action@v11
         with:
           directory: .
-          skip-check: CKV_DOCKER_2,CKV_GITHUB_1
+          skip_check: CKV_DOCKER_2,CKV_DOCKER_3,CKV_DOCKER_10
 
   bandit:
     name: Bandit - Security Linter for Python
