--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,7 @@ RUN pip install prometheus-fastapi-instrumentator
 
 COPY . .
 
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:8000/health || exit 1
+
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
