Corregir sintaxis y comandos en workflow CI para evitar errores

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run Trivy scan
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'filesystem'
+          scan-type: filesystem
           vuln-type: 'os,library'
           path: '.'
 
